--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=studentjava
 spring.jpa.hibernate.ddl-auto=update
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled = true
+spring.liquibase.enabled = false
